--- a/package.json
+++ b/package.json
@@ -4,15 +4,12 @@
   "description": "amqp.node type declarations for Flow",
   "main": "index.js",
   "scripts": {
-    "test": "exit 0",
-    "install": "flow-types install"
+    "test": "exit 0"
   },
   "author": "Vladimir Kurchatkin <vladimir.kurchatkin@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "flow-bin": "0.69.0"
   },
-  "dependencies": {
-    "flow-types": "1.0.0"
-  }
+  "dependencies": {}
 }
